<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:weightSum="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mediaQueueRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight=".5" >

            <ImageButton
                android:id="@+id/addMediaButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@android:drawable/ic_menu_add" />

            <TextView
                android:id="@+id/labelSongTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/song_title_placeholder"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/labelArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/artist_title_placeholder"
                android:textAlignment="center"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/progressTrack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progressTint="@color/colorAccent"
                android:thumbTint="@color/colorAccent" />

            <TextView
                android:id="@+id/mediaTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="--:-- / 0:00"
                android:textSize="12sp"
                android:textAlignment="center" />

            <LinearLayout
                android:id="@+id/playButtonToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/skipPrevButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/skip_previous_selector" />

                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/play_selector" />

                <ImageButton
                    android:id="@+id/skipForwardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/skip_next_selector" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/leftLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/title_left" />

                <SeekBar
                    android:id="@+id/leftRightVolumeRatioSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:progressTint="@color/colorAccent"
                    android:thumbTint="@color/colorAccent" />

                <TextView
                    android:id="@+id/rightLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/title_right" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>