...
    <string name="dialog_msg_rename_test_result">Please Enter a New Name for this Hearing Test Result</string>
    <string name="title_dialog_delete_test_result">Delete this Hearing Test Result</string>
    <string name="dialog_msg_delete_test_result">Are you sure? The result cannot be recovered after deleting</string>
    <string name="title_dialog_cancel_hearing_test">Cancel this Hearing Test?</string>
    <string name="dialog_msg_cancel_hearing_test">Are you sure? All progress will be lost</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="agreement_disclaimer">I have read and understand the above disclaimer.</string>
    <string name="continue_button">Continue</string>
    <string name="title_dialog_hearing_test_insructions">Hearing Test Instructions</string>
    <string name="dialog_msg_hearing_test_instructions">To collect accurate results, please set your phone volume to max and take the test in a quiet room.\n\nSounds will play at increasing volume levels each second. Please press the button when you hear a sound.</string>
    <string name="got_it">Got it!</string>
    <string name="label_hearing_test_left_ear">Left</string>
    <string name="label_hearing_test_right_ear">Right</string>
    <string name="button_revert">REVERT</string>
...
